--- a/MyCodeCamp/MyCodeCamp/appsettings.json
+++ b/MyCodeCamp/MyCodeCamp/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MyCodeCampDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
