add token based authentication

--- a/MyCodeCamp/MyCodeCamp/appsettings.json
+++ b/MyCodeCamp/MyCodeCamp/appsettings.json
@@ -5,8 +5,16 @@
 
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
   },
-  "AllowedHosts": "*"
+
+  "Tokens": {
+    "Key": "FooBarQuuxIsTheStandardTypeOfStringWeUse12345",
+    "Issuer": "http://mycodecamp.io",
+    "Audience": "http://mycodecamp.io"
+  }
+  //"AllowedHosts": "*"
 }
