--- a/MyCodeCamp/MyCodeCamp/MyCodeCamp.csproj
+++ b/MyCodeCamp/MyCodeCamp/MyCodeCamp.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="2.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="2.1.4" />
     <PackageReference Include="Microsoft.Extensions.Primitives" Version="2.1.6" />
